--- a/singolo1.css
+++ b/singolo1.css
@@ -9,3 +9,12 @@ body {
   font-family: "Lato Regular", sans-serif;
   font-size: 1.6rem;
 }
+
+.wrapper {
+  width: 1020px;
+  margin: auto;
+}
+
+.icon__pencil {
+  background-image: url(/assets/image/services/pen.svg);
+}
