--- a/singolo1.css
+++ b/singolo1.css
@@ -1,20 +1,76 @@
-@import url("font.css");
-
+@import "font.css";
 html {
   font-size: 10px;
 }
 
 body {
+  font-size: 1.8rem;
+  font-family: "Lato", Verdana, sans-serif;
   margin: 0;
-  font-family: "Lato Regular", sans-serif;
-  font-size: 1.6rem;
+  padding: 0;
+}
+
+h1 {
+  font-size: 2.5rem;
+  line-height: 0.6rem;
+  color: #ffffff;
+  font-weight: 700;
+  text-align: left;
+}
+
+h2 {
+  font-size: 3rem;
+  line-height: 1.8rem;
+  color: #666d89;
+  font-weight: 900;
+  text-align: left;
+}
+
+h4 {
+  font-size: 1.8rem;
+  line-height: 1.8rem;
+  color: #666d89;
+  font-weight: 900;
+  text-align: left;
 }
 
 .wrapper {
-  width: 1020px;
+  max-width: 1020px;
   margin: auto;
 }
 
-.icon__pencil {
-  background-image: url(/assets/image/services/pen.svg);
+.header {
+  background-color: #2d303a;
+  border-bottom: 6px solid #323746;
 }
+
+.header__wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.navigation {
+  display: flex;
+  font-size: 1.2rem;
+  line-height: 0.6rem;
+  font-weight: 700;
+  text-align: left;
+}
+
+.navigation__link {
+  list-style: none;
+  padding: 0 10px;
+  cursor: pointer;
+}
+
+.navigation__link > a {
+  text-decoration: none;
+  color: #ffffff;
+}
+
+.navigation__link > a:hover {
+  color: #f06c64;
+}
+
+/*# sourceMappingURL=singolo1.css.map */
