--- a/singolo1.css
+++ b/singolo1.css
@@ -16,6 +16,7 @@ h1 {
   color: #ffffff;
   font-weight: 700;
   text-align: left;
+  letter-spacing: 0.001rem;
 }
 
 h2 {
@@ -42,12 +43,22 @@ h4 {
 .header {
   background-color: #2d303a;
   border-bottom: 6px solid #323746;
+  height: 89px;
 }
 
 .header__wrapper {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding-top: 26px;
+}
+
+.logo {
+  padding-left: 38px;
+}
+
+.logo__star {
+  color: #f06c64;
 }
 
 .navigation {
@@ -67,6 +78,7 @@ h4 {
 .navigation__link > a {
   text-decoration: none;
   color: #ffffff;
+  text-transform: uppercase;
 }
 
 .navigation__link > a:hover {
