--- a/singolo1.css
+++ b/singolo1.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import "font.css";
 html {
   font-size: 10px;
@@ -16,7 +17,7 @@ h1 {
   color: #ffffff;
   font-weight: 700;
   text-align: left;
-  letter-spacing: 0.001rem;
+  letter-spacing: 0.01rem;
 }
 
 h2 {
@@ -55,6 +56,7 @@ h4 {
 
 .logo {
   padding-left: 38px;
+  cursor: pointer;
 }
 
 .logo__star {
@@ -67,12 +69,23 @@ h4 {
   line-height: 0.6rem;
   font-weight: 700;
   text-align: left;
+  padding-right: 40px;
+  padding-top: 10px;
 }
 
 .navigation__link {
   list-style: none;
-  padding: 0 10px;
+  letter-spacing: 0.01rem;
+  padding: 0 0 0 12px;
   cursor: pointer;
+}
+
+.navigation__link:not(:last-child)::after {
+  content: "∙";
+  display: inline-block;
+  line-height: 1px;
+  color: #494e62;
+  padding-left: 12px;
 }
 
 .navigation__link > a {
@@ -83,6 +96,54 @@ h4 {
 
 .navigation__link > a:hover {
   color: #f06c64;
+}
+
+.slider-block {
+  box-sizing: border-box;
+  background-color: #f06c64;
+  height: 600px;
+  border-bottom: 6px solid #ea676b;
+}
+
+.slider-block__chev {
+  cursor: pointer;
+  opacity: 0.25;
+  transition: all 0.3s;
+  position: relative;
+}
+
+.slider-block__chev:hover {
+  opacity: 1;
+}
+
+.slider-block__chev_prev {
+  bottom: 175px;
+  left: 43px;
+}
+
+.slider-block__iphone_vertical {
+  position: relative;
+  top: 53px;
+  left: 92px;
+}
+
+.slider-block__iphone_horisontal {
+  position: relative;
+  bottom: 69px;
+  left: 160px;
+}
+
+.slider-block__chev_next {
+  transform: rotate(180deg);
+  left: 211px;
+  bottom: 175px;
+}
+
+.our-services-block {
+  box-sizing: border-box;
+  height: 500px;
+  background-color: #f1f1f1;
+  border-bottom: 6px solid #ffffff;
 }
 
 /*# sourceMappingURL=singolo1.css.map */
