--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -24,6 +24,7 @@ h2 {
   color: $color-text;
   font-weight: 900;
   text-align: left;
+  margin: 0;
 }
 
 h4 {
@@ -32,4 +33,5 @@ h4 {
   color: $color-text;
   font-weight: 900;
   text-align: left;
+  margin: 0;
 }
