--- a/sass/components/_our-servicess.scss
+++ b/sass/components/_our-servicess.scss
@@ -2,5 +2,36 @@
   box-sizing: border-box;
   height: 500px;
   background-color: #f1f1f1;
-  border-bottom: 6px solid #ffffff;
+  border-bottom: 6px solid $color-light;
+}
+
+.our-services-block__wrapper {
+  padding-top: 68px;
+  max-width: 940px;
+}
+
+.our-services-block__wrapper > p {
+  height: 57px;
+  font-size: 1.8rem;
+  line-height: 3rem;
+  color: #767e9e;
+  font-weight: 300;
+  text-align: left;
+  padding-top: 10px;
+  letter-spacing: -0.01rem;
+}
+
+.layout-3-column {
+  display: flex;
+  flex-wrap: wrap;
+}
+.services__content > p {
+  width: 219px;
+  height: 128px;
+  font-size: 1.2rem;
+  line-height: 2.2rem;
+  color: #767e9e;
+  font-weight: 400;
+  text-align: left;
+  margin: 0;
 }
