--- a/singolo1.css
+++ b/singolo1.css
@@ -26,6 +26,7 @@ h2 {
   color: #666d89;
   font-weight: 900;
   text-align: left;
+  margin: 0;
 }
 
 h4 {
@@ -34,6 +35,7 @@ h4 {
   color: #666d89;
   font-weight: 900;
   text-align: left;
+  margin: 0;
 }
 
 .wrapper {
@@ -144,6 +146,38 @@ h4 {
   height: 500px;
   background-color: #f1f1f1;
   border-bottom: 6px solid #ffffff;
+}
+
+.our-services-block__wrapper {
+  padding-top: 68px;
+  max-width: 940px;
+}
+
+.our-services-block__wrapper > p {
+  height: 57px;
+  font-size: 1.8rem;
+  line-height: 3rem;
+  color: #767e9e;
+  font-weight: 300;
+  text-align: left;
+  padding-top: 10px;
+  letter-spacing: -0.01rem;
+}
+
+.layout-3-column {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.services__content > p {
+  width: 219px;
+  height: 128px;
+  font-size: 1.2rem;
+  line-height: 2.2rem;
+  color: #767e9e;
+  font-weight: 400;
+  text-align: left;
+  margin: 0;
 }
 
 /*# sourceMappingURL=singolo1.css.map */
