--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -35,3 +35,14 @@ h4 {
   text-align: left;
   margin: 0;
 }
+
+.icon {
+  width: 59px;
+  height: 59px;
+  border-radius: 29px;
+  border: 2px solid #666d89;
+  display: inline-block;
+  background-repeat: no-repeat;
+  background-position: center;
+  box-sizing: border-box;
+}
