add: singolo 2 portfolio

--- a/sass/components/_our-servicess.scss
+++ b/sass/components/_our-servicess.scss
@@ -21,13 +21,9 @@
   letter-spacing: -0.01rem;
 }
 
-.layout-3-column {
-  display: flex;
-  flex-wrap: wrap;
+.our-services-block__layouts {
   padding-top: 30px;
-  justify-content: space-between;
 }
-
 .services {
   display: flex;
 }
