--- a/sass/style.scss
+++ b/sass/style.scss
@@ -16,3 +16,4 @@
 @import "components/slider-block";
 @import "components/our-servicess";
 @import "components/portfolio";
+@import "components/about-us";
