--- a/sass/components/_our-servicess.scss
+++ b/sass/components/_our-servicess.scss
@@ -46,6 +46,14 @@
   text-align: justify;
 }
 
+.services {
+  > .icon {
+    width: 59px;
+    height: 59px;
+    border-radius: 29px;
+    border: 2px solid #666d89;
+  }
+}
 .icon__pencil {
   background-image: url(../assets/image/services/pen.svg);
 }
