--- a/sass/components/_about-us.scss
+++ b/sass/components/_about-us.scss
@@ -41,6 +41,11 @@
     border-radius: 16px;
     border: 1px solid #666d89;
     margin-right: 4px;
+    cursor: pointer;
+    @extend %transition;
+    &:hover {
+      border: 1px solid #eb5055;
+    }
   }
 }
 .icon__facebook {
