--- a/sass/style.scss
+++ b/sass/style.scss
@@ -11,9 +11,11 @@
 // Layouts
 @import "layouts/wrapper";
 @import "layouts/header";
+@import "layouts/footer";
 
 // Components
 @import "components/slider-block";
 @import "components/our-servicess";
 @import "components/portfolio";
 @import "components/about-us";
+@import "components/qoute";
