--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -5,7 +5,7 @@
   vertical-align: middle;
 }
 .footer__wrapper {
-  padding-top: 18px;
+  padding-top: 19px;
   max-width: 940px;
   display: flex;
   justify-content: space-between;
@@ -21,7 +21,7 @@
 .footer__icon {
   align-items: right;
   > .icon {
-    margin: 1px 3px 0 0;
+    margin-right: 3px;
     width: 32px;
     height: 32px;
     border-radius: 16px;
