--- a/sass/components/_about-us.scss
+++ b/sass/components/_about-us.scss
@@ -49,15 +49,15 @@
   }
 }
 .icon__facebook {
-  background-image: url(/assets/image/social-icons/facebook.png);
+  background-image: url(../assets/image/social-icons/facebook.png);
   color: #666d89;
 }
 .icon__google {
-  background-image: url(/assets/image/social-icons/google+.png);
+  background-image: url(../assets/image/social-icons/google+.png);
 }
 .icon__twitter {
-  background-image: url(/assets/image/social-icons/twitter.png);
+  background-image: url(../assets/image/social-icons/twitter.png);
 }
 .icon__in {
-  background-image: url(/assets/image/social-icons/linkedin.png);
+  background-image: url(../assets/image/social-icons/linkedin.png);
 }
