--- a/sass/components/_qoute.scss
+++ b/sass/components/_qoute.scss
@@ -96,17 +96,17 @@
 }
 
 .icon__location {
-  background-image: url(assets/image/social-icons/location.png);
+  background-image: url(../assets/image/social-icons/location.png);
   width: 13px;
   height: 13px;
 }
 .icon__phone {
-  background-image: url(assets/image/social-icons/phone.png);
+  background-image: url(../assets/image/social-icons/phone.png);
   width: 13px;
   height: 13px;
 }
 .icon__mail {
-  background-image: url(assets/image/social-icons/mail.png);
+  background-image: url(../assets/image/social-icons/mail.png);
   width: 13px;
   height: 13px;
 }
