fix: image name

--- a/css/style.css
+++ b/css/style.css
@@ -321,7 +321,7 @@ p {
   background-image: url(../assets/image/services/heart.svg);
 }
 
-.icon__phone {
+.icon__phone1 {
   background-image: url(../assets/image/services/phone.svg);
 }
 
