--- a/sass/components/_our-servicess.scss
+++ b/sass/components/_our-servicess.scss
@@ -63,7 +63,7 @@
 .icon__heart {
   background-image: url(../assets/image/services/heart.svg);
 }
-.icon__phone {
+.icon__phone1 {
   background-image: url(../assets/image/services/phone.svg);
 }
 .icon__bubble {
